force-app/main/default/objects/Account/fields/AccountingBalance__c.field-meta.xml
<CustomField>
    <fullName>AccountingBalance__c</fullName>
    <label>Solde comptable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>