force-app/main/default/objects/Account/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Numéro de compte</label>
    <type>AutoNumber</type>
</CustomField>