force-app/main/default/objects/Account/fields/Centre_profit_partenaire__c.field-meta.xml
<CustomField>
    <fullName>Centre_profit_partenaire__c</fullName>
    <externalId>true</externalId>
    <label>Centre profit partenaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>