force-app/main/default/objects/Account/fields/CNUF__c.field-meta.xml
<CustomField>
    <fullName>CNUF__c</fullName>
    <description>Code national unifié fournisseur</description>
    <inlineHelpText>Code national unifié fournisseur</inlineHelpText>
    <label>CNUF</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>