force-app/main/default/objects/Account/fields/CompanyCEO__c.field-meta.xml
<CustomField>
    <fullName>CompanyCEO__c</fullName>
    <label>Président de la société</label>
    <length>255</length>
    <type>Text</type>
</CustomField>