force-app/main/default/objects/Account/fields/CompletedFile__c.field-meta.xml
<CustomField>
    <fullName>CompletedFile__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Si décoché, les OI/BDC associés à ce compte ne pourront pas être signés</inlineHelpText>
    <label>Dossier complet ?</label>
    <type>Checkbox</type>
</CustomField>