force-app/main/default/objects/Account/fields/CreditManagementStatus__c.field-meta.xml
<CustomField>
    <fullName>CreditManagementStatus__c</fullName>
    <label>Statut Credit Management</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>BLOQUE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>