force-app/main/default/objects/Account/fields/Cumulated_amount_signed__c.field-meta.xml
<CustomField>
    <fullName>Cumulated_amount_signed__c</fullName>
    <label>Montant cumulé signé</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>OI signé</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>