force-app/main/default/objects/Account/fields/FieldTestGitHub__c.field-meta.xml
<CustomField>
    <fullName>FieldTestGitHub__c</fullName>
    <label>FieldTestGitHub</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>