force-app/main/default/objects/Account/fields/GenerixCode__c.field-meta.xml
<CustomField>
    <fullName>GenerixCode__c</fullName>
    <externalId>true</externalId>
    <label>Code unique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>