force-app/main/default/objects/Account/fields/GenerixSapCode__c.field-meta.xml
<CustomField>
    <fullName>GenerixSapCode__c</fullName>
    <externalId>true</externalId>
    <label>Code SAP Générix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>