force-app/main/default/objects/Account/fields/GitCheckbox__c.field-meta.xml
<CustomField>
    <fullName>GitCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GitCheckbox</label>
    <type>Checkbox</type>
</CustomField>