force-app/main/default/objects/Account/fields/IntracomVatNumber__c.field-meta.xml
<CustomField>
    <fullName>IntracomVatNumber__c</fullName>
    <label>N° TVA Intracommunautaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>