force-app/main/default/objects/Account/fields/MaxMonthlyBalance__c.field-meta.xml
<CustomField>
    <fullName>MaxMonthlyBalance__c</fullName>
    <inlineHelpText>Solde associé au payeur de l&apos;Open Order</inlineHelpText>
    <label>Solde de dépense maximum mensuel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>