force-app/main/default/objects/Account/fields/Nb_invoices__c.field-meta.xml
<CustomField>
    <fullName>Nb_invoices__c</fullName>
    <label>Nb factures</label>
    <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>