force-app/main/default/objects/Account/fields/Nb_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Nb_opportunity__c</fullName>
    <label>Nb d&apos;opportunités</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>