force-app/main/default/objects/Account/fields/OutstandingAmount_delta__c.field-meta.xml
<CustomField>
    <fullName>OutstandingAmount_delta__c</fullName>
    <formula>OutstandingAmountInhouse__c +  OutstandingAmountCoface__c -  Total_OutstandingAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Encours maison + Encours COFACE - Encours total</inlineHelpText>
    <label>Delta d’encours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>