force-app/main/default/objects/Account/fields/OutstandingAmount_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>OutstandingAmount_Last_Update__c</fullName>
    <inlineHelpText>Date de dernière modification du solde comptable</inlineHelpText>
    <label>Dernière modification de l&apos;encours</label>
    <type>Date</type>
</CustomField>