force-app/main/default/objects/Account/fields/OutstandingAmount_not_invoiced__c.field-meta.xml
<CustomField>
    <fullName>OutstandingAmount_not_invoiced__c</fullName>
    <inlineHelpText>Montant des insertions clôturées mais non facturées</inlineHelpText>
    <label>Encours non facturé</label>
    <summarizedField>Opportunity.ClosedAmountNotInvoiced__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>OI signé</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>