force-app/main/default/objects/Account/fields/OutstandingAmountAllowed__c.field-meta.xml
<CustomField>
    <fullName>OutstandingAmountAllowed__c</fullName>
    <label>Encours autorisé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>