force-app/main/default/objects/Account/fields/OutstandingAmountCoface__c.field-meta.xml
<CustomField>
    <fullName>OutstandingAmountCoface__c</fullName>
    <label>Encours COFACE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>