force-app/main/default/objects/Account/fields/OutstandingAmountInhouse__c.field-meta.xml
<CustomField>
    <fullName>OutstandingAmountInhouse__c</fullName>
    <label>Encours Maison</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>