force-app/main/default/objects/Account/fields/PartnerCompany_Code__c.field-meta.xml
<CustomField>
    <fullName>PartnerCompany_Code__c</fullName>
    <label>Code société partenaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>