force-app/main/default/objects/Account/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <defaultValue>&quot;30 jours&quot;</defaultValue>
    <label>Modalité de paiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 jours</fullName>
            </value>
            <value>
                <fullName>45 jours</fullName>
            </value>
            <value>
                <fullName>60 jours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>