force-app/main/default/objects/Account/fields/RCS_Number__c.field-meta.xml
<CustomField>
    <fullName>RCS_Number__c</fullName>
    <label>Numéro RCS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>