force-app/main/default/objects/Account/fields/Recovery__c.field-meta.xml
<CustomField>
    <fullName>Recovery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obligation Réf. Client</label>
    <type>Checkbox</type>
</CustomField>