force-app/main/default/objects/Account/fields/RegistrationCity__c.field-meta.xml
<CustomField>
    <fullName>RegistrationCity__c</fullName>
    <label>Ville d&apos;immatriculation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>