force-app/main/default/objects/Account/fields/RevenueVsTarget__c.field-meta.xml
<CustomField>
    <fullName>RevenueVsTarget__c</fullName>
    <formula>Revenue__c - Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Var vs Obj</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>