force-app/main/default/objects/Account/fields/SalesforceId__c.field-meta.xml
<CustomField>
    <fullName>SalesforceId__c</fullName>
    <formula>Id</formula>
    <label>Id Salesforce</label>
    <type>Text</type>
</CustomField>