force-app/main/default/objects/Account/fields/SapCode__c.field-meta.xml
<CustomField>
    <fullName>SapCode__c</fullName>
    <externalId>true</externalId>
    <label>Code SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>