force-app/main/default/objects/Account/fields/ShareCapital__c.field-meta.xml
<CustomField>
    <fullName>ShareCapital__c</fullName>
    <label>Capital social</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>