force-app/main/default/objects/Account/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <label>Objectif</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>