force-app/main/default/objects/Account/fields/Total_OutstandingAmount__c.field-meta.xml
<CustomField>
    <fullName>Total_OutstandingAmount__c</fullName>
    <formula>OutstandingAmount_not_invoiced__c +  AccountingBalance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Encours non facturé + solde comptable</inlineHelpText>
    <label>Encours total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>