force-app/main/default/objects/Account/fields/VatType__c.field-meta.xml
<CustomField>
    <fullName>VatType__c</fullName>
    <label>TVA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>20</fullName>
                <default>true</default>
                <label>20 (TVA France 20.00%)</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>EXO (EXO HORS CEE 0.00%)</label>
            </value>
            <value>
                <fullName>00</fullName>
                <label>00 (TVA CEE 0.00%)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>