force-app/main/default/objects/Account/validationRules/Mandatory_BillingAddress.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_BillingAddress</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
 ISBLANK ( BillingCountry ),
 ISBLANK ( BillingStreet ),
 ISBLANK ( BillingPostalCode ),
 ISBLANK ( BillingCity )
)</errorConditionFormula>
    <errorMessage>L&apos;adresse de facturation du compte doit être renseignée</errorMessage>
</ValidationRule>