force-app/main/default/objects/Account/validationRules/Siren_FR.validationRule-meta.xml
<ValidationRule>
    <fullName>Siren_FR</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISNEW(),
 LEN( Siren__c ) &lt;&gt; 9,
 BillingCountry = &quot;France&quot;
)&amp;&amp; NOT($Setup.lazyLoading__c.DisableValidationRule__c)</errorConditionFormula>
    <errorDisplayField>Siren__c</errorDisplayField>
    <errorMessage>Le Siren doit faire 9 caractères</errorMessage>
</ValidationRule>