force-app/main/default/objects/Account/validationRules/VR_ACC_AccountName.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ACC_AccountName</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.CS1_ByPass__c.ByPass_Validation_Rules__c),
NOT($Permission.Admin_Fonctionnel),
NOT($Permission.DAFCDG),
ISCHANGED(Name))</errorConditionFormula>
    <errorMessage>Vous ne pouvez pas modifier le nom du compte.</errorMessage>
</ValidationRule>