force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CreditManagementStatus__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Mine</filterScope>
    <label>Mes comptes</label>
</ListView>