force-app/main/default/objects/Account/listViews/Tous_les_annonceurs.listView-meta.xml
<ListView>
    <fullName>Tous_les_annonceurs</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CreditManagementStatus__c</columns>
    <columns>IntracomVatNumber__c</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Annonceur</value>
    </filters>
    <label>Annonceurs</label>
</ListView>