force-app/main/default/objects/Account/listViews/Tous_les_autres_comptes.listView-meta.xml
<ListView>
    <fullName>Tous_les_autres_comptes</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CreditManagementStatus__c</columns>
    <columns>IntracomVatNumber__c</columns>
    <columns>SapCode__c</columns>
    <columns>GenerixCode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Adex</value>
    </filters>
    <label>Adex</label>
</ListView>