force-app/main/default/objects/Account/listViews/Toutes_les_agences.listView-meta.xml
<ListView>
    <fullName>Toutes_les_agences</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CreditManagementStatus__c</columns>
    <columns>IntracomVatNumber__c</columns>
    <columns>SapCode__c</columns>
    <columns>GenerixCode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Agence</value>
    </filters>
    <label>Agences</label>
</ListView>